# OrderBook

./: CMakeLists.txt  README.md
include/: ILogger.hpp  MatchingAlgorithm.hpp  Order.hpp  OrderBook.hpp  Server.hpp  SpdlogLogger.hpp
src/: MatchingAlgorithm.cpp  Order.cpp  OrderBook.cpp  Server.cpp  SpdlogLogger.cpp  main.cpp
tests/: CMakeLists.txt  MatchingAlgorithmTests.cpp  OrderBookTests.cpp  ServerTest.cpp  tests.cpp
